--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -13,11 +13,6 @@ body, html, #root, .App {
   position: relative; 
 }
 
-.App-header {
-  background-color: #1f1f1f;
-  padding: 10px;
-  width: 100%;
-}
 
 .content {
   position: relative;
@@ -53,23 +48,25 @@ body, html, #root, .App {
 }
 
 .employee-table th, .employee-table td, .authorized-entry-table th, .authorized-entry-table td {
-  border: 1px solid #333;
+  border: 4px solid #333;
   padding: 5px;
   text-align: left;
   font-size: 14px;
 }
 
 .graph {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 48%;
-  height: 45%; 
+  position: relative;
+  margin-top: 20px; /* Adjust this margin as needed */
+  width: 50%;
+  height: 60%;
+  margin-left: 600px;
+  margin-right: auto;
 }
+
 
 .screenshot-section {
   position: absolute;
-  top: 47%; 
+  top: 65%; 
   left: 50%;
   width: 48%;
   height: 40%; 
@@ -118,4 +115,23 @@ body, html, #root, .App {
   cursor: pointer;
   border-radius: 5px;
   margin: 5px;
+}
+
+.unauthorized-access-table {
+  margin: 20px;
+}
+
+.unauthorized-access-table table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.unauthorized-access-table th, .unauthorized-access-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.unauthorized-access-table th {
+  background-color: #282828;
 }
